# charuconstruction

./: .gitignore  .gitmodules  README.md  pyproject.toml
charuconstruction/: __init__.py  camera.py  charuco.py  frame.py  math.py  media_reader.py  resolution.py
charuconstruction/charuconstruction/: camera.py  frame.py  math.py  media_reader.py
charuconstruction/force_sensor/: __init__.py  b24_force_sensor.py  force_sensor.py  listener.py
charuconstruction_flutter/: README.md  pubspec.yaml
charuconstruction_flutter/android/app/: build.gradle.kts
charuconstruction_flutter/ios/Runner/: Info.plist
charuconstruction_flutter/ios/Runner.xcodeproj/: project.pbxproj
charuconstruction_flutter/lib/: main.dart
charuconstruction_flutter/lib/devices/: b24_force_sensor.dart  device.dart
charuconstruction_flutter/lib/providers/: devices_provider.dart
charuconstruction_flutter/lib/screens/: main_page.dart
charuconstruction_flutter/lib/utils/: math.dart  misc.dart
charuconstruction_flutter/lib/widgets/: data_graph.dart  media_reader_container.dart
charuconstruction_flutter/linux/: CMakeLists.txt
charuconstruction_flutter/linux/flutter/: generated_plugins.cmake
charuconstruction_flutter/linux/runner/: my_application.cc
charuconstruction_flutter/test/: python_random_test.dart  widget_test.dart
charuconstruction_flutter/web/: index.html  manifest.json
charuconstruction_flutter/windows/: CMakeLists.txt
charuconstruction_flutter/windows/runner/: Runner.rc  (+1 more)
orthotics_reconstruction/: __init__.py  model.py
run/: b24_main.py  create_board.py  main.py
(+64 files in other folders)
