[build-system]
requires = [
    "setuptools", 
    "numpy",
    "ezc3d",
    "scipy",
    "lxml",
    "xarray",
]
build-backend = "setuptools.build_meta"

[project]
name =  "orthotics_reconstruction"
description = "A kinematic reconstructions for the multicenter orthotics dataset."
dynamic = ["version"]
authors = [
    {name = "Pariterre", email = "pariterre@hotmail.com"},
    {name = "mickaelbegon", email = "mickaelbegon@gmail.com"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python"
]
requires-python = ">=3.10"
dependencies = [
    "numpy", 
    "ezc3d",
    "scipy",
    "lxml",
    "xarray",
]

[project.urls]
Documentation = "https://github.com/s2mlab/orthotics_reconstruction/tree/main#readme"
Source = "https://github.com/s2mlab/orthotics_reconstruction"
Tracker = "https://github.com/s2mlab/orthotics_reconstruction/issues"

[tool.setuptools]
packages = ["orthotics_reconstruction"]

[tool.setuptools.dynamic]
version = {attr = "orthotics_reconstruction.__version__"}
